--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "core-js": "^3.6.4",
         "vue": "^2.6.12",
         "vue-axios": "^3.1.2",
-        "vue-router": "^3.4.7"
+        "vue-router": "^3.4.7",
+        "vuex": "^3.5.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.3.0",
